[package]
name = "fine-directory-curator"
version = "0.2.0"
edition = "2021"
description = "A Rust-powered CLI tool to organize and curate files in macOS directories."
license = "MIT"

[[bin]]
name = "fdc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"